<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="henke.intervalapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityString"
        android:textAlignment="center"
        android:layout_marginTop="42dp"
        android:textSize="40sp"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start"
        android:text="@string/start"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="startButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pause"
        android:text="@string/pause"
        android:textSize="20sp"
        android:layout_above="@+id/start"
        android:layout_alignParentStart="true"
        android:onClick="pauseButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stop"
        android:text="@string/stop"
        android:textSize="20sp"
        android:layout_above="@+id/pause"
        android:layout_alignParentStart="true"
        android:onClick="stopButton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setup"
        android:text="@string/setup"
        android:layout_above="@+id/stop"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:onClick="showSetup"/>

    <TextView
        android:text="@string/timerString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:textAlignment="center"
        android:textSize="40sp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/activity"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/laps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lapsString"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/timer"
        android:layout_alignParentStart="true" />


</RelativeLayout>
